--- a/esilos/style.css
+++ b/esilos/style.css
@@ -8,17 +8,18 @@
 
 html, body {
     height: 100vh;
-    width: 100vh;
+    width: 100vw;
     background-color: black;
 }
 
 body{
     background: url('../imagens/fundo-madeira.jpg') no-repeat top center;
-    background-size: cover;
+    background-size:cover;
     background-attachment: fixed;
 }
 
 main{
+    
     height: 100vh;
     position: relative;
    
@@ -39,6 +40,25 @@ section#telefone{
     position: relative;
     top: 80px;
     left: 22px;
-    width: 269px;
+    width: 267px;
     height: 471px;
+  }
+
+  section#redes-sociais{
+    text-align: right;
+  }
+
+  section#redes-sociais img{
+    width:50px ;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.400);
+    box-sizing: border-box;
+  }
+
+  section#redes-sociais img:hover{
+    border: 2px solid rgba(255, 255, 255, 0.637);
+    transform: translate(-3px, -3px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.623);
+    transition: transform .3s, border .5s;
   }
